syntax = "proto3";

import "google/protobuf/timestamp.proto";

package nakji.sui.pool;

option go_package = "github.com/nakji-network/sui-connector";

message SwappedEvent {
    google.protobuf.Timestamp ts = 1;
    bytes tx_digest = 2;
    uint64 event_seq = 3;
    bool atob = 4;
    bytes pool = 5;
    bytes partner = 6;
    uint64 amount_in = 7;
    uint64 amount_out = 8;
    uint64 ref_amount = 9;
    uint64 fee_amount = 10;
    uint64 vault_a_amount = 11;
    uint64 vault_b_amount = 12;
    bytes before_sqrt_price = 13; // uint128
    bytes after_sqrt_price = 14; // uint128
    uint64 steps = 15;
}
